# fs-bots

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bot-broadcast/: Cargo.toml
bot-broadcast/src/: commands.rs  lib.rs  trigger.rs
bot-calendar/: Cargo.toml
bot-calendar/src/: commands.rs  lib.rs  trigger.rs
bot-control/: Cargo.toml
bot-control/src/: commands.rs  lib.rs  trigger.rs
bot-db/: Cargo.toml
bot-db/migrations/: schema.sql
bot-db/src/: lib.rs
bot-db/src/entities/: audit_log.rs  bot_meta.rs  child_bot.rs  join_request.rs  known_room.rs  mod.rs  poll_state.rs  room_collection.rs  room_collection_member.rs  subscription.rs  sync_message.rs  sync_rule.rs
bot-gatekeeper/: Cargo.toml
bot-gatekeeper/src/: commands.rs  lib.rs  trigger.rs
bot-room-sync/: Cargo.toml
bot-room-sync/src/: commands.rs  db.rs  lib.rs  trigger.rs
bots/: Cargo.toml
bots/migrations/: schema.sql
bots/src/: audit.rs  config.rs  db.rs  dispatcher.rs  lib.rs  main.rs  runtime.rs  secrets.rs  trigger.rs  webhook.rs
bots/src/commands/: mod.rs  ping.rs  status.rs
fs-bot/: Cargo.toml
fs-bot/src/: command.rs  context.rs  lib.rs  registry.rs  response.rs  rights.rs  router.rs
fs-bot/src/commands/: deploy.rs  health.rs  help.rs  ping.rs  status.rs
