[package]
name        = "bot-broadcast"
description = "Broadcast module — subscribe rooms to Bus topics and forward events"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[dependencies]
fs-bot  = { path = "../../fs-libs/fs-bot" }
bot-db  = { path = "../bot-db" }

tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json  = "1"
tracing     = "0.1"
