[package]
name        = "bot-control"
description = "Control module — manage child bot instances from within a bot"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[dependencies]
fs-bot   = { path = "../../fs-libs/fs-bot" }
bot-db  = { path = "../bot-db" }
fs-types = { path = "../../fs-libs/fs-types" }


tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
