[package]
name        = "bot-control"
description = "Control module — manage child bot instances from within a bot"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[dependencies]
fs-bot   = { path = "../fs-bot" }
bot-db  = { path = "../bot-db" }

async-trait = "0.1"
tracing     = "0.1"
