[package]
name        = "bot-gatekeeper"
description = "Gatekeeper module — join-request queue and IAM-based access control"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[dependencies]
fsn-bot   = { path = "../../FreeSynergy.Lib/fsn-bot" }
fsn-types = { path = "../../FreeSynergy.Lib/fsn-types" }

sqlx        = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json  = "1"
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
