[package]
name        = "bot-room-sync"
description = "Room-Sync module — synchronize messages and members across rooms and platforms"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[dependencies]
fs-bot  = { path = "../../fs-libs/fs-bot" }
bot-db  = { path = "../bot-db" }

async-trait = "0.1"
serde_json  = "1"
tracing     = "0.1"
