[package]
name        = "fs-bots"
description = "Bot runtime — polls messengers, dispatches commands, runs trigger engine"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]

[[bin]]
name = "fs-bot-runtime"
path = "src/main.rs"

[dependencies]
# FreeSynergy Lib
# matrix feature disabled: upstream matrix-sdk 0.16 recursion overflow on rustc ≥1.94
# Re-enable when matrix-sdk fixes the bug (or we upgrade to a fixed version).
# See: https://github.com/matrix-org/matrix-rust-sdk/issues/...
fs-channel  = { path = "../../fs-channel", features = ["telegram"] }
fs-bot      = { path = "../fs-bot" }
fs-types    = { path = "../../fs-libs/fs-types" }

# Bot modules (N5-N10)
bot-broadcast  = { path = "../bot-broadcast" }
bot-gatekeeper = { path = "../bot-gatekeeper" }
bot-calendar   = { path = "../bot-calendar" }
bot-control    = { path = "../bot-control" }
bot-db         = { path = "../bot-db" }
bot-room-sync  = { path = "../bot-room-sync" }
# fs-inventory pulls in sea-orm/sqlx-sqlite which conflicts with rusqlite.
# The runtime resolves inventory data via the FSN HTTP API (Phase P).

# Async
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"

# Database — via fs-db (SeaORM). No direct sqlx dependency.

# HTTP (webhook server)
axum         = { version = "0.7", features = ["tokio"] }

# Error handling
anyhow       = "1"

# Logging
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
