[package]
name        = "fs-bot"
description = "Bot command framework with registry and standard commands for FreeSynergy"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-bots"

[features]
default = []
llm     = ["dep:fs-llm"]

[dependencies]
fs-bus     = { path = "../../fs-bus" }
fs-channel = { path = "../../fs-channel" }
serde_json  = { version = "1" }
thiserror   = { version = "2" }
tracing     = { version = "0.1" }
async-trait = { version = "0.1" }
tokio       = { version = "1", features = ["full"] }

fs-llm = { path = "../../fs-llm", optional = true }

[package.metadata.cargo-machete]
ignored = ["fs-llm"]
